# jira-cli

./: README.md  check_projects.sh  create_issue.sh  pyproject.toml
.claude/: settings.local.json
jira_cli/: cache.py  cli.py  client.py  config.py  picker.py  template.py
